# retina-health-classification

./: .gitignore  Dockerfile  README.md  confusion_matrix.npy  file_watcher.sh  main.tf  pyproject.toml  requirements.txt  run_docker.sh
data_analysis/: confusion_matrix.py  crop_exploration.ipynb  glaucoma_exploration.ipynb
src/: Configuration.py  DoubleClassifier.py  DoubleEyeClassifier.py  SimpleClassifier.py  SingleEyeClassifier.py  confusion_matrix.py  run_experiment.py
src/pipeline/: evaluate.py  train.py
src/utils/: EyesDataset.py  data.py  layers.py  model.py  quality_of_life.py
